# Qwen3-VL

./: .gitignore  Qwen3-VL.code-workspace  README.md  __init__.py  dataset_checker.py  inference.py  inference2.py  inference_speedtest.py  inference_with_analysis_delta_progress.py  inference_with_analysis_without_initial_delta_progress.py  inference_with_analysis_without_initial_delta_progress_multi.py  inference_without_reason.py  inference_without_reason_delta_progress.py  pyproject.toml  setup.py  temp.sh  train_eval_split_index.json
dataset/: analyze_frame_indices.py  build_config.yaml  build_qwen_dataset.py  sanity_check.py
inference/: batch_inference_curve.sh  eval_curves_from_batch_demos.py  eval_pairwise_from_batch_samples.py  example_data_samples.json  inference_curve.py  inference_curve_from_demo.py  inference_pair.py  inference_pairwise_from_demo.py  inferencer.py  usage.sh
qwen-vl-finetune/: Example_data  README.md
qwen-vl-finetune/demo/: single_images.json
qwen-vl-finetune/inference/: INFERENCE_README.md  inference_finetuned.py  inference_simple.py
qwen-vl-finetune/qwenvl/data/: __init__.py
qwen-vl-finetune/scripts/: sft-test.sh  sft.sh  zero2.json
qwen-vl-finetune/tools/: generate_vlac_progress_dataset.py
qwen-vl-finetune/wandb/: latest-run
qwen-vl-finetune/wandb/run-20251117_170931-54rzrtx4/: run-54rzrtx4.wandb
qwen-vl-finetune/wandb/run-20251117_171113-s843ilx3/: run-s843ilx3.wandb
rewardCS/: README.md  __init__.py  client.py  server.py
utils/: create_train_eval_split.py  data_formatting.py  frame_sampling.py  prompt.py  utils.py
(+33 files in other folders)
